fix toggle refs

When an object is unreffed from other C code and the last reference is the seed
toggle reference, g_object_remove_toggle_ref() could be called from
seed_gobject_finalize() through the javascript garbage collector.

The "data" parameter given to g_object_remove_toggle_ref() must be the same as
the one used at g_object_add_toggle_ref-time in seed_wrap_object(), otherwise
the toggle callback seed_toggle_ref will not be called and a critical warning
"couldn't find toggle ref" might be printed.

Additionally, g_object_run_dispose() must not be called after
g_object_remove_toggle_ref() since gobject will be freed by then.

https://bugzilla.gnome.org/show_bug.cgi?id=698988